# todoctor

./: .cspell.json  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  changelog.md  cspell.config.ts  eslint.config.ts  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  readme.md  stylelint.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md  security.md
.github/workflows/: docs.yml  release.yml  test.yml
preview/: index.html
preview/blocks/: empty.svelte  footer.svelte  graph.svelte  header.svelte  info.svelte  list.svelte
preview/elements/: avatar.svelte  chart-doughnut.svelte  chart-line.svelte  chart.svelte  container.svelte  logo.svelte  note.svelte  table-code.svelte  table-comment.svelte  table-date.svelte  table-path.svelte  table-user.svelte  table.svelte  typography.svelte
preview/mock/: api.mock.ts  data.ts
preview/stores/: data.ts  theme.ts
preview/styles/: base.css  colors.css  fonts.css  spaces.css
preview/typings/: index.d.ts
preview/view/: app.svelte
scripts/: build.js  create-packages.js  get-package-json.js  install.js  platforms.js  postinstall.js  version.js
src/: add_missing_days.rs  blame.rs  copy_dir_recursive.rs  escape_json_values.rs  exec.rs  get_current_directory.rs  get_current_exe_path.rs  get_diff.rs  get_dist_path.rs  get_files_list.rs  get_history.rs  get_project_name.rs  get_todoctor_version.rs  identify_supported_file.rs  identify_todo_comment.rs  lib.rs  main.rs  prepare_blame_data.rs  remove_duplicate_dates.rs  todo_keywords.rs  types.rs
src/comments/: get_comments.rs  identify_not_ignored_file.rs  mod.rs  prepare_blame_data.rs
tests/: check_git_repository.rs  exec.rs  identify_todo_comment.rs
(+29 files in other folders)
