[package]
name = "todoctor"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
cross = "0.2.5"
csv = "1.3.1"
futures = "0.3.31"
indicatif = "0.17.11"
lazy_static = "1.5.0"
open = "5.3.2"
oxc = "0.73.2"
regex = "1.12.1"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
mockall = "0.13.1"

[profile.release]
lto = true
