[package]
name = "todoctor"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
cross = "0.2.5"
csv = "1.4.0"
futures = "0.3.32"
indicatif = "0.18.4"
lazy_static = "1.5.0"
open = "5.3.4"
oxc = "0.128.0"
regex = "1.12.3"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
mockall = "0.14.0"

[profile.release]
lto = true
